--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0; 
-    font-family: "Lucida Console", Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
@@ -13,7 +13,7 @@ nav {
     height: 70px;
     display: flex;
     align-items: center;
-    justify-content: flex-start; 
+    justify-content: space-between; 
 }
 
 nav img {
@@ -22,15 +22,23 @@ nav img {
     margin: 0 10px; 
 }
 
+.button {
+    background-color: #5271FF;
+    color: #fff;
+    font-weight: bold;
+    padding: 15px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 #editor {
     display: flex;
     justify-content: center;
 }
 
 #markdown-content, #preview-content {
-    width: 35%;
+    width: 100%;
     height: 80vh;
-    margin: 5px;
     padding: 10px;
     box-sizing: border-box;
     border: 1px solid #ccc;
@@ -73,7 +81,7 @@ nav ul, #component-block ul {
     font: small sans-serif;
 }
 
-.list{
+.list {
     height: 50px;
     margin: 10px;
     display: flex;
@@ -82,10 +90,51 @@ nav ul, #component-block ul {
     background: #b4d8fc;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    justify-content: space-between;
 }
 
-.list img{
+.list .text {
+    flex: 1; 
+    text-align: left;
+}
+
+.icon-container {
+    display: flex;
+}
+
+.list .reset {
+    margin-right: 2px; 
+}
+
+.list .remove {
+    margin-left: 8px; 
+}
+
+.list img {
     width: 20px;
     margin-right: 15px;
     margin-left: 20px;
 }
+
+
+.editor-container, .preview-container {
+    position: relative;
+    width: 35%;
+    margin: 5px;
+}
+
+.label {
+    position: absolute;
+    top: -40px; 
+    left: 2px;
+    padding: 0 5px;
+    color: #6fb3f7;
+    font: medium sans-serif;
+}
+
+#component-block-head p{
+    color: #6fb3f7;
+    font: medium sans-serif;
+    margin-top: -20px; 
+}
+
