Enable reset component functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                     <img src="static/images/icon_1.svg" alt="Icon">
                     <div class="text">Acknowledgement</div>
                     <div class="icon-container">
-                        <img class="reset" src="static/images/icon_3.svg" alt="Reset">
+                        <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
                         <img class="remove" src="static/images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                     <img src="static/images/icon_1.svg" alt="Icon">
                     <div class="text">Appendix</div>
                     <div class="icon-container">
-                        <img class="reset" src="static/images/icon_3.svg" alt="Reset">
+                        <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
                         <img class="remove" src="static/images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     <img src="static/images/icon_1.svg" alt="Icon">
                     <div class="text">Authors</div>
                     <div class="icon-container">
-                        <img class="reset" src="static/images/icon_3.svg" alt="Reset">
+                        <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
                         <img class="remove" src="static/images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     <img src="static/images/icon_1.svg" alt="Icon">
                     <div class="text">API Reference</div>
                     <div class="icon-container">
-                        <img class="reset" src="static/images/icon_3.svg" alt="Reset">
+                        <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
                         <img class="remove" src="static/images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <img src="static/images/icon_1.svg" alt="Icon">
                     <div class="text">Title and Description</div>    
                     <div class="icon-container">
-                        <img class="reset" src="static/images/icon_3.svg" alt="Reset">
+                        <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
                         <img class="remove" src="static/images/icon_2.svg" alt="Remove">
                     </div>
                 </div>
