Enable remove component functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     <div class="text">Acknowledgement</div>
                     <div class="icon-container">
                         <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
-                        <img class="remove" src="static/images/icon_2.svg" alt="Remove">
+                        <img class="remove" src="static/images/icon_2.svg" alt="Remove" onclick="remove(this.closest('.list').id)">
                     </div>
                 </div>
                 <div class="list" draggable="true" id="appendix" role="button" onclick="selectedSection(this.id)">
@@ -50,7 +50,7 @@
                     <div class="text">Appendix</div>
                     <div class="icon-container">
                         <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
-                        <img class="remove" src="static/images/icon_2.svg" alt="Remove">
+                        <img class="remove" src="static/images/icon_2.svg" alt="Remove" onclick="remove(this.closest('.list').id)">
                     </div>
                 </div>
                 <div class="list" draggable="true" id="authors" role="button" onclick="selectedSection(this.id)">
@@ -58,7 +58,7 @@
                     <div class="text">Authors</div>
                     <div class="icon-container">
                         <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
-                        <img class="remove" src="static/images/icon_2.svg" alt="Remove">
+                        <img class="remove" src="static/images/icon_2.svg" alt="Remove" onclick="remove(this.closest('.list').id)">
                     </div>
                 </div>
                 <div class="list" draggable="true" id="apiReference" role="button" onclick="selectedSection(this.id)">
@@ -66,7 +66,7 @@
                     <div class="text">API Reference</div>
                     <div class="icon-container">
                         <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
-                        <img class="remove" src="static/images/icon_2.svg" alt="Remove">
+                        <img class="remove" src="static/images/icon_2.svg" alt="Remove" onclick="remove(this.closest('.list').id)">
                     </div>
                 </div>
                 <div class="list" draggable="true" id="title&description" role="button" onclick="selectedSection(this.id)">
@@ -74,7 +74,7 @@
                     <div class="text">Title and Description</div>    
                     <div class="icon-container">
                         <img class="reset" src="static/images/icon_3.svg" alt="Reset" onclick="reset(this.closest('.list').id)">
-                        <img class="remove" src="static/images/icon_2.svg" alt="Remove">
+                        <img class="remove" src="static/images/icon_2.svg" alt="Remove" onclick="remove(this.closest('.list').id)">
                     </div>
                 </div>
             </div>
