--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         </ul>
         <ul>
             <li>
-                <div class="button">
+                <div class="button" id="download-btn" onclick="download()">
                     Download
                 </div>
             </li>
